# Labourious

./: .aider.conf.yml  .clinerules  .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  LICENSE  docker-compose.yml  package-lock.json  package.json  setup.cfg
.claude-flow/: CAPABILITIES.md  config.yaml  memory-package.json
.serena/: project.yml
aider_skills/: caveman.md  circuit_breakers.md  dry_run_safety.md  headroom.md  least_privilege.md  ponytail.md  rtk.md  ruflo.md  secret_scrubbing.md  superpowers.md
alembic/: env.py
backend/: config.py  main.py  requirements.txt
docker/: Dockerfile
docs/: AGENTS.md  API_REFERENCE.md  BROKERS.md  CONTEXT_FILES.md  FEATURES.md  LABOURIOUS_AGENT_CREATION.md  LABOURIOUS_ARCHITECTURE.md  LABOURIOUS_DOCUMENTATION_SUMMARY.txt  LABOURIOUS_FRONTEND.md  LABOURIOUS_PHASE1_COMPLETE_DOCS.md  LABOURIOUS_PROJECT_STRUCTURE.md  LABOURIOUS_README.md  LABOURIOUS_SETUP.md  PHASE2_PLAN_PROMPT.md  PHASE_1_SKELETON_CODE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  phase4-design-reference.md
frontend/: package-lock.json  package.json
tests/: conftest.py  test_agent_loop.py  test_agent_orchestrator.py  test_alpaca_connector.py  test_analytics_api.py  test_api_agents.py  test_api_health.py  test_api_new_routers.py  test_auth_agent_rbac.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_models.py  test_auth_schemas.py  test_backtest.py  test_backtest_ui.py  test_binance_connector.py  test_broker_base.py  test_broker_live.py  test_confidence_scorer.py  test_cost_estimator.py  test_db.py  (+23 more)
(+495 files in other folders)
