[metadata]
name = labourious
version = 0.1.0
description = AI Trading Warroom — autonomous agent orchestration platform
author = Labourious Team
python_requires = >=3.11

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .
include = backend*

[flake8]
max-line-length = 100
exclude = .venv,__pycache__,build,dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
